@@ -250,13 +250,7 @@ real_get_title (NautilusWindow *window)
 static NautilusIconInfo *
 real_get_icon (NautilusWindow *window)
 {
-	GIcon *icon;
-	NautilusIconInfo *info;
-
-	icon = g_themed_icon_new ("gnome-fs-desktop");
-	info = nautilus_icon_info_lookup (icon, 48);
-	g_object_unref (icon);
-	return info;
+	return nautilus_icon_info_lookup_from_name ("user-desktop", 48);
 }
 
 static void
